[project]
name = "vlei-e2e"
version = "0.1.0"
description = "Add your description here"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Kent Bull", email = "kent@kentbull.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "hio==0.6.14",
    "keri==1.2.7",
    "keria==0.2.0",
    "sally-verifier==1.0.3",
    "signifypy==0.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3,<9.0.0",  # Pin for stability; latest as of Sep 2025
    # Add other test deps if needed, e.g., pytest-mock, pytest-asyncio
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
keria = { path = "../../keri/kentbull/keria", editable = true }
sally-verifier = { path = "../../keri/kentbull/sally", editable = true }
signifypy = { path = "../../keri/kentbull/signifypy", editable = true }
